resolved author img overlapping with recommendation post

--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -568,6 +568,7 @@
   background-color: rgba(0, 0, 0, 0.85);
   display: flex;
   justify-content: space-between;
+  z-index: 1;
 
   @include media(">=sm") {
     padding: rem(15px);
